set master01 as the init vip location

--- a/roles/keepalived_haproxy/templates/keepalived.conf.jinja2
+++ b/roles/keepalived_haproxy/templates/keepalived.conf.jinja2
@@ -19,11 +19,10 @@ vrrp_script check_apiserver {
 }
 
 vrrp_instance VI_1 {
-    state BACKUP
+    state {{ role }}
     interface {{ NIC }}
     virtual_router_id {{ keepalived_vr_id }}
     priority {{ priority }}
-    nopreempt
     authentication {
         auth_type PASS
         auth_pass k8sDanger0us
