--- a/roles/kubeadm_init/templates/kubeadm.conf.jinja2
+++ b/roles/kubeadm_init/templates/kubeadm.conf.jinja2
@@ -12,7 +12,7 @@ imageRepository: {{ k8s_gcr_url }}
 controlPlaneEndpoint: "{{ api_vip_hosts }}:6443"
 networking:
   dnsDomain: cluster.local
-  serviceSubnet: 10.96.0.0/12
+  serviceSubnet: 10.96.0.0/16
   podSubnet: {{ pod_cidr }}
 certificatesDir: /etc/kubernetes/pki
 apiServer:
@@ -24,3 +24,13 @@ etcd:
     dataDir: /var/lib/etcd
 scheduler: {}
 controllerManager: {}
+
+---
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+cgroupDriver: systemd
+
+---
+apiVersion: kubeproxy.config.k8s.io/v1alpha1
+kind:  KubeProxyConfiguration
+mode: ipvs
