--- a/roles/kubeadm_init/templates/kubeadm.conf.jinja2
+++ b/roles/kubeadm_init/templates/kubeadm.conf.jinja2
@@ -9,7 +9,7 @@ kind: ClusterConfiguration
 clusterName: kubernetes
 kubernetesVersion: v{{ k8s_version }}
 imageRepository: {{ k8s_gcr_url }}
-controlPlaneEndpoint: "{{ api_vip_hosts }}:6443"
+controlPlaneEndpoint: "{{ api_vip_hosts }}:{{ haproxy_port }}"
 networking:
   dnsDomain: cluster.local
   serviceSubnet: 10.96.0.0/16
@@ -24,12 +24,10 @@ etcd:
     dataDir: /var/lib/etcd
 scheduler: {}
 controllerManager: {}
-
 ---
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
 cgroupDriver: systemd
-
 ---
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 kind:  KubeProxyConfiguration
